--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="static/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/png" href="static/favicon-16x16.png"/>
+    <link rel="shortcut icon" type="image/png" href="static/favicon-32x32.png"/>
+    <link rel="shortcut icon" type="image/png" href="static/favicon-96x96.png"/>
     <title>contract-app</title>
   </head>
   <body>
