--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="static/favicon-16x16.png"/>
     <link rel="shortcut icon" type="image/png" href="static/favicon-32x32.png"/>
     <link rel="shortcut icon" type="image/png" href="static/favicon-96x96.png"/>
-    <title>contract-app</title>
+    <title>Contracts by Smallet</title>
   </head>
   <body>
     <div id="app"></div>
